# Thales_secure_element_hal

./: Android.bp  GtoService.cpp  README  SecureElement.cpp  SecureElement.h  SecureElementHalCallback.cpp  SecureElementHalCallback.h  android.hardware.secure_element@1.0-service-gto.rc  libse-gto-hal.conf  pax_global_header
esehal/src/: .gitignore  checksum.c  gpio.c  gpio.h  iso7816_t1.c  iso7816_t1.h  libse-gto-private.h  libse-gto.c  log.h  spi.c  transport.c
esehal/src/linux/: se_gemalto.h
esehal/src/se-gto/: libse-gto.h
secure_element/: Android.bp  libse-gto-hal.conf
secure_element/1.0/: Android.bp  GtoService.cpp  SecureElement.cpp  SecureElement.h  SecureElementHalCallback.cpp  SecureElementHalCallback.h  android.hardware.secure_element.rc  android.hardware.secure_element@1.0-service-gto.rc  libse-gto-hal.conf
secure_element/1.0/esehal/src/: Makefile.am  checksum.c  checksum.h  compiler.h  iso7816_t1.c  iso7816_t1.h  libse-gto.c  libse-gto.pc.in  log.c  spi.h  transport.c
secure_element/1.0/esehal/src/linux/: se_gemalto.h
secure_element/1.0/esehal/src/se-gto/: libse-gto.h
secure_element/1.1/: Android.bp  GtoService.cpp  SecureElement.cpp  SecureElement.h  android.hardware.secure_element@1.1-service-gto.rc
secure_element/1.1/se-gto/: libse-gto.h
secure_element/1.2/: Android.bp  GtoService.cpp  SecureElement.cpp  SecureElement.h  android.hardware.secure_element@1.2-service-gto.rc
secure_element/aidl/: Android.bp  GtoService.cpp  SecureElement.cpp  SecureElement.h  android.hardware.secure_element_gto.rc
secure_element/aidl/se-gto/: libse-gto.h
secure_element/esehal/: Android.bp
secure_element/esehal_gp/: Android.bp
(+27 files in other folders)
